--- a/CoreEmpty/wwwroot/index.html
+++ b/CoreEmpty/wwwroot/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Webapp</title>
-    <script type="text/javascript" src="/dist/bundle.js"></script>
+    <title>Webapp</title>    
 </head>
 <body>
-    <H1>Loading</H1>
+    <div id="app"></div>
+    <script type="text/javascript" src="/dist/bundle.js"></script>
 </body>
 </html>
